{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "f39c4b71-0fa1-e601-3c59-7ad971239cb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c86481225d3c51",
            "arn": "arn:aws:ec2:us-east-1:911902230729:instance/i-0dcb079e6a095db44",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcb079e6a095db44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07306a4f13a36d73d",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_dns": "ec2-54-172-231-52.compute-1.amazonaws.com",
            "public_ip": "54.172.231.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Environment": "demo",
                  "ManagedBy": "Terraform",
                  "Project": "devops-demo"
                },
                "throughput": 0,
                "volume_id": "vol-0e1132817d433df79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f7deb10c9cecd98",
            "tags": {
              "Name": "devops-demo-k3s-node"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-k3s-node",
              "Project": "devops-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d04062039fdd1166"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_security_group.k3s",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911902230729:internet-gateway/igw-0302df73e02a07e3c",
            "id": "igw-0302df73e02a07e3c",
            "owner_id": "911902230729",
            "tags": {
              "Name": "devops-demo-igw"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-igw",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-004a7546c78ff4a5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911902230729:route-table/rtb-0b46e48a8d4eecc38",
            "id": "rtb-0b46e48a8d4eecc38",
            "owner_id": "911902230729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0302df73e02a07e3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-demo-rt"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-rt",
              "Project": "devops-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-004a7546c78ff4a5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a2266733738ff82",
            "route_table_id": "rtb-0b46e48a8d4eecc38",
            "subnet_id": "subnet-09f7deb10c9cecd98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911902230729:security-group/sg-0d04062039fdd1166",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d04062039fdd1166",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "41.69.174.222/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "41.69.174.222/32"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "devops-demo-k3s-20250814002353263700000001",
            "name_prefix": "devops-demo-k3s-",
            "owner_id": "911902230729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-k3s-sg"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-k3s-sg",
              "Project": "devops-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-004a7546c78ff4a5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911902230729:subnet/subnet-09f7deb10c9cecd98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f7deb10c9cecd98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911902230729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-subnet"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-subnet",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-004a7546c78ff4a5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911902230729:vpc/vpc-004a7546c78ff4a5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2678918d1e6a7d6",
            "default_route_table_id": "rtb-0ca7c9fa7dd4760be",
            "default_security_group_id": "sg-0cc07ec8f35373d33",
            "dhcp_options_id": "dopt-0eb0e06a07d0373b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004a7546c78ff4a5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca7c9fa7dd4760be",
            "owner_id": "911902230729",
            "tags": {
              "Name": "devops-demo-vpc"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "devops-demo-vpc",
              "Project": "devops-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}